# algorithm-service

./: .env  Cargo.toml  Dockerfile  Dockerfile.dev  LICENCE  Makefile  README.md  config.json  docker-compose.dev.yml  docker-compose.yml
src/: algorithm.rs  algorythm.rs  auth.rs  config.rs  database.rs  endpoint.rs  main.rs  model.rs
