[package]
name = "dayquest_aglorythm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
sqlx = { version = "0.8.2", features = ["mysql"] }
