[package]
name = "dayquest_aglorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-async-std"] }
serde_json = "1.0.135"
figment = { version = "0.10.19", features = ["json", "serde_json"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
ctrlc = "3.4.5"
colored = "3.0.0"
uuid = "1.12.0"
dotenv = "0.15.0"
